Disabled RabbitMq and Enabled Simple Broker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=chatApplication
-spring.rabbitmq.host=${RABBITMQ_HOST}
-spring.rabbitmq.username=${RABBITMQ_USERNAME}
-spring.rabbitmq.password=${RABBITMQ_PASSWORD}
-spring.rabbitmq.port=${RABBITMQ_PORT}
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=61613
