--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.port=61613
+spring.security.oauth2.client.registration.github.client-id = Iv23liWnnKbsu5IsPiDu
+spring.security.oauth2.client.registration.github.client-secret = cf9699417185ec583544af1dabb25fa79dd715f2
+spring.security.oauth2.client.registration.github.scope=read:user,user:email
+spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
+spring.security.oauth2.client.registration.github.client-name=GitHub
