OAuth in Chat Application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.security.oauth2.client.registration.github.client-id = Iv23liWnnKbsu5IsPi
 spring.security.oauth2.client.registration.github.client-secret = cf9699417185ec583544af1dabb25fa79dd715f2
 spring.security.oauth2.client.registration.github.scope=read:user,user:email
 spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
+spring.security.oauth2.client.registration.github.redirect-uri=https://chatapplication-chatapp.up.railway.app/login/oauth2/code/github
 spring.security.oauth2.client.registration.github.client-name=GitHub
